# ferro-lang

./: .gitignore  Makefile  README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: ferroc.dune-package  ferroc.install
_build/default/.dune/: configurator  configurator.v2
_build/default/src/: lexer.ml  relp.ml  stdout.ml
_build/default/src/.merlin-conf/: exe-relp
_build/default/src/.relp.eobjs/: dune__exe.ml-gen  dune__exe__Lexer.impl.d  dune__exe__Relp.impl.all-deps  dune__exe__Relp.impl.d  dune__exe__Relp.intf.d  dune__exe__Stdout.impl.d
_build/default/src/.relp.eobjs/byte/: dune__exe.cmt  dune__exe__Lexer.cmt  dune__exe__Relp.cmti  dune__exe__Stdout.cmt
_build/default/src/.relp.eobjs/native/: dune__exe.cmx  dune__exe__Lexer.cmx  dune__exe__Relp.cmx  dune__exe__Stdout.cmx
src/: ast.ml  ast.mli  dune  lexer.ml  lexer.mli  parser.ml  parser.mli  relp.ml  stdout.mli
