(lang dune 3.7)

(name ferroc)

(generate_opam_files false)

(source
 (github ferroc-lang/ferro-lang))

(authors "Gurvir Singh <ferro.lang@gmail.com>")

(maintainers "Gurvir Singh <ferro.lang@gmail.com>")

(license MIT)

(package
 (name ferroc)
 (version 0.1)
 (synopsis "A simple REPL")
 (description "A simple REPL")
 (license MIT))
